--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <script>function onSignIn(googleUser) {
 
   var id_token = googleUser.getAuthResponse().id_token;
-
+  console.log(id_token);
   var xhr = new XMLHttpRequest();
   xhr.open('POST', '/google');
   xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
